--- a/index.html
+++ b/index.html
@@ -1,15 +1,35 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Marlena's Portfolio</h1>
+    <h2>Web Developing Udemy Course</h2>
+    <hr />
+    <a  id="movie-ranking" 
+        href="./public/2.4+Movie+Ranking+Project/movie_ranking.html">
+        <h3>Movie Ranking Project</h3>
+    </a>
+    
+    <img    src="./assets/images/best_movies_project.png" 
+            alt="movie project preview" 
+            height="200"/>
+    <hr />
+    <a  id="birthday-invite" 
+        href="./public/3.4+Birthday+Invite+Project/birthday_invite.html">
+        <h3>Birthday Invite Project</h3>
+    </a>
+    
+    <img    src="./assets/images/my_birthday_project.png" 
+            alt="birthday project preview" 
+            height="200"/>
+    <hr />
+    <a href="./public/about.html">About me</a>
+    <a href="./public/contact.html">Contact me</a>
+</body>
+</html>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
